feat: create route.js

--- a/.env
+++ b/.env
@@ -4,11 +4,6 @@ PORT = 3000
 #DATABASE INFO
 DB_HOST = localhost
 DB_USER = root
-DB_PASSWORD = root
+DB_PASSWORD = 1234
 DB_NAME = music-db
 
-#UTILITIES
-IMG_PATH = http://127.0.0.1:3000/
-
-
-FE_APP = http://localhost:5173
