add: route of album

--- a/.env
+++ b/.env
@@ -2,8 +2,9 @@
 PORT = 3000
 
 #DATABASE INFO
-DB_HOST = localhost
+DB_HOST =localhost
 DB_USER = root
-DB_PASSWORD = 1234
+DB_PASSWORD = root
 DB_NAME = music-db
+
 
